@@ -1,5 +1,5 @@
-$NetBSD: distinfo,v 1.3 2005/02/23 22:24:23 agc Exp $
+$NetBSD: distinfo,v 1.4 2005/03/27 20:54:07 wiz Exp $
 
-SHA1 (Class-MethodMaker-2.06.tar.gz) = 2728c876d4121f67cca6133dd13a078b4ee6d867
-RMD160 (Class-MethodMaker-2.06.tar.gz) = e177c446dfe4388688f3dc52880e7b4bd621f7d2
-Size (Class-MethodMaker-2.06.tar.gz) = 88671 bytes
+SHA1 (Class-MethodMaker-2.07.tar.gz) = c73025625bc55bedbe71450677b08adc5e4da9f4
+RMD160 (Class-MethodMaker-2.07.tar.gz) = fdf35f0e30ba02a4ee15b05aec039eedb8f90a78
+Size (Class-MethodMaker-2.07.tar.gz) = 88752 bytes
